[Composer] Edit->Paste always pastes into the message body
Steps to Reproduce
- Find a message with multiple recipients and click "Reply To All"
- In the composer window, select some people in the "To" line of the header
- Press ctrl-x to cut the addresses to the clipboard
- Click on the "CC" line of the email header
- Press ctrl-v to paste the addresses in the CC line
Expected Behavior
- The addresses should disappear from the To line with ctrl-x
- The addresses should be added to the CC line with ctrl-v
Alternate
- Select the email addresses
- Copy the email address with ctrl-c
- Then delete the selected email addresses
Observed Behavior
When in the To, CC, or BCC fields of the composer window:
- The cut keyboard (ctrl-x) shortcut has no effect.
- Neither does the keyboard shortcut for copy (ctrl-c). These keyboard shortcuts do not move the selected text to the Gnome clip board.
Affects Version 3.28.5-0ubuntu0.18.04.1
Notes
- Once the text is selected, the mouse can be used to right click and perform a cut or copy.
- The keyboard shortcuts of ctrl-x, ctrl-c, and ctrl-v all perform as expected in the email body of the composer window.
Edited by Milan Crha