I#250 - [Composer] Edit->Paste always pastes into the message body

Closes https://gitlab.gnome.org/GNOME/evolution/issues/250